--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="icon">
 	  <img class="portrait" src="image/portrait.png" alt="portrait">
 	</div>
-	<h1>[first name] [last name]</h1>
+	<h1>[TAKARA] [MIYAZAKI]</h1>
       </header>
 
       <section class="affiliation">
