--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/all.css" rel="stylesheet">
+    <script type='text/javascript' src='javascript/sample0.js'></script>
+    <script type='text/javascript' src='javascript/jquery.particleground.min.js'></script>
+
   </head>
 
   <body>
+    <div id="particles">
     <div class="container">
       <header class="header">
 	<div class="icon">
@@ -34,6 +38,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    
+    </div>
   </body>
 </html>
 
