--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
   </head>
 
   <body>
+    <div class="wrapper">
     <div id="particles">
-    <div class="container">
+    
+    </div>
+      <div class="container">
       <header class="header">
 	<div class="icon">
 	  <img class="portrait" src="image/portrait.png" alt="portrait">
@@ -35,11 +38,11 @@
 	<a href="https://facebook.com"><img class="links" src="image/FB-f-Logo__blue_144.png" alt="Facebook"></a>
       </footer>      
     </div>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     
-    </div>
   </body>
 </html>
 
